...
    "Add Baby" : {

    },
    "Add Entry" : {

    },
    "Add New Baby" : {

    },
    "Add Your Baby" : {

    },
    "Age" : {
...
    "Baby icon" : {

    },
    "Baby Summary" : {

    },
    "Baby's Name" : {

    },
    "Basic Info" : {

    },
    "Beige" : {
...
    "Continue" : {

    },
    "Dark Green" : {

    },
    "Dashboard" : {

    },
    "Date" : {

    },
    "Date of Birth" : {
...
    "Dehydration Heart" : {

    },
    "Dehydration Symptoms" : {

    },
    "Delete" : {

    },
    "Delete Baby" : {

    },
    "Diaper #" : {
...
    "Preferences" : {

    },
    "Red" : {

    },
    "Save" : {

    },
    "Scale" : {

    },
    "Select baby" : {
...
    "Select Date & Time" : {

    },
    "Selected" : {

    },
    "Settings" : {

    },
    "Stool #" : {

    },
    "Stool Details" : {
...
